<resources>
    <string name="app_name">My Application10</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="add">Add Post</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="discover">Discover</string>
    <string name="create_status">Create a Story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>